# python-inspector

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  Makefile  NOTICE  README.rst  azure-pipelines.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_builder.ABOUT  requiremnFix.txt  resolve_cli.python  setup.cfg  test_resolution2.py.foo
.github/workflows/: ci.yml  docs-ci.yml  pypi-release.yml  testing.yml
docs/source/: conf.py  dependencies-design.rst  index.rst  test-protocol.rst
etc/scripts/: check_thirdparty.py  fetch_thirdparty.py  test_utils_pip_compatibility_tags.py  utils_dejacode.py  utils_pip_compatibility_tags.py  utils_requirements.py  utils_thirdparty.py
src/_packagedcode/: __init__.py  models.py  pypi.py  pypi_setup_py.py  utils.py
src/python_inspector/: __init__.py  api.py  cli_utils.py  dependencies.py  error.py  lockfile.py  logging.py  package_data.py  resolution.py  resolution.py.ABOUT  resolve_cli.py  settings.py  setup_py_live_eval.py  utils.py  utils_pip_compatibility_tags.py  utils_pip_compatibility_tags.py.ABOUT  utils_pypi.py  utils_pypi.py.ABOUT
tests/: conftest.py  test_api.py  test_cli.py  test_codestyle.py  test_package_data.py  test_packagecode_pypi.py  test_pypi.py  test_requirement_parsing.py  test_resolution.py  test_setup_py_live_eval.py  test_setup_py_live_eval.py.ABOUT  test_setup_py_live_eval_cli.py  test_setup_py_parsing.py  test_utils.py  test_utils_pip_compatibility_tags.py  test_utils_pypi.py  test_utils_pypi_supported_tags.py
tests/data/: azure-devops.req-310-expected.json  azure-devops.req-312-expected.json  azure-devops.req-313-expected.json  azure-devops.req-314-expected.json  azure-devops.req-38-expected.json  azure-devops.req-39-expected.json  azure-devops.req-expected.json  azure-devops.req.txt  default-url-expected.json  environment-marker-test-requirements.txt-expected.json  error-requirements.txt  example-requirements-ignore-errors-expected.json  fetch_links_test.html  frozen-requirements-pdt-expected.json  frozen-requirements.txt  frozen-requirements.txt-expected.json  hash-requirements.txt  hash-requirements.txt-expected.json  no-install-requires-expected.json  parse-reqs-with-setup_requires-and-python-requires.json  parse-reqs.json  partial-setup.py  pdt-expected.json  pdt-requirements.txt  pdt-requirements.txt-expected.json  pinned-pdt-requirements.txt  pinned-pdt-requirements.txt-expected.json  pinned-requirements.txt  pinned-requirements.txt-expected.json  prefer-source-expected.json  psycopg2-links-expected.json  psycopg2.html  relative-links-expected.json  req.txt  requirements-test.txt  resolved-pinned-requirements-expected.txt  setup-distutils-asnames.txt  setup-distutils-qualifiedfct.txt  setup-distutils.txt  setup-qualifiedfct.txt  (+23 more)
tests/data/insecure-setup/: setup.py  setup.py-expected.json
tests/data/insecure-setup-2/: setup.py  setup.py-expected-new.json  setup.py-expected.json
tests/data/insecure-setup-2/testpkh/: __init__.py
tests/data/insecure-setup/rdflib/: __init__.py
tests/data/recursive_requirements/: com.txt  r.txt
tests/data/resolved_deps/: autobahn-310-expected.json  flask-310-expected.json  flask-310-win-expected.json  flask-36-expected.json  flask-39-expected.json  torch-312-expected.json
tests/data/secure-setup/: setup-emptyrequires.py  setup-norequires.py  setup-requires.py
tests/data/setup/: no-direct-dependencies-setup.py  no-direct-dependencies-setup.py-expected.json  simple-setup.py  simple-setup.py-expected.json  spdx-setup.py  spdx-setup.py-expected.json
