[metadata]
name = python-inspector
license = Apache-2.0
version = 0.15.1

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = python-inspector is is a collection of utilities to collect PyPI package metadata and resolve packages dependencies.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/aboutcode-org/python-inspector

author = nexB. Inc. and others
author_email = info@aboutcode.org

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities

keywords =
    open source
    scan
    package
    dependency
    pypi
    python
    SBOM
    sca
    dependencies
    dependency resolution
    resolver
    resolvelib
    pip
    requirements

license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst
    CODE_OF_CONDUCT.rst
    README.rst

[options]
python_requires = >=3.10

package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false

install_requires =
    attrs >= 18.1, !=20.1.0
    click > 7.0
    colorama >= 0.3.9
    commoncode >= 30.0.0
    dparse2 >= 0.7.0
    fasteners >= 0.17.3
    importlib_metadata >= 4.12.0
    packageurl_python >= 0.9.0
    pkginfo2 >= 30.0.0
    pip-requirements-parser >= 32.0.1
    requests >= 2.18.0
    resolvelib >= 1.0.0
    saneyaml >= 0.5.2
    toml >= 0.10.0
    mock >= 3.0.5
    packvers >= 21.5
    aiohttp >= 3.8
    aiofiles >= 23.1
    pydantic >= 2.10.0
    pydantic_settings >= 2.8.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    python-inspector = python_inspector.resolve_cli:resolve_dependencies

[options.extras_require]
dev =
    pytest >= 7.0.1
    pytest-xdist >= 2
    aboutcode-toolkit >= 7.0.2
    twine
    ruff
    pytest-rerunfailures
    pytest-asyncio >= 0.21
    Sphinx>=6.2.0
    sphinx-rtd-theme>=1.0.0
    sphinx-reredirects >= 0.1.2
    doc8>=0.11.2
    sphinx-autobuild
    sphinx-rtd-dark-mode>=1.3.0
    sphinx-copybutton
