[options]
install_requires = 
	pytest-black >= 0.3.7; \
	python_implementation != "PyPy"
	attrs >= 18.1, !=20.1.0
	Beautifulsoup4 >= 4.0.0
    pip>=19.1 # For proper file:// URLs support
	click >= 6.7, !=7.0
	intbitset >= 2.3.0
	requests >= 2.7.0
	saneyaml >= 0.5.2
	text_unidecode >= 1.0
    pure-eval; black; tox;
	typing >=3.6, < 3.7; python_version < "3.7"

[options.extras_require]
testing = 
	pytest >= 6, != 7.0.0
	pytest-xdist >= 2
	aboutcode-toolkit >= 6.0.0
	black
docs = 
	Sphinx >= 3.3.1
	sphinx-rtd-theme >= 0.5.0
	doc8 >= 0.8.1